--- a/about.html
+++ b/about.html
@@ -24,55 +24,93 @@
     </div>
   </header>
 
-  <main class="container section centered">
-    <div class="panel"><div class="panel-inner">
-      <h2 class="m0">About this Project</h2>
-      <p class="mt8">A lightweight MVC CRUD dashboard for exploring US states. Data is stored in your browser (<code>localStorage</code>) and powers both the table and charts. External insights are fetched via the World Bank API (read-only).</p>
-
-      <!-- Team -->
-      <h3 class="mt24 m0">Team</h3>
-      <div class="cards mt16">
-        <div class="card"><img class="img-team" src="assets/faisal.JPG" alt="Faisal"/><small><strong>Faisal</strong> — PM &amp; Backend</small></div>
-        <div class="card"><img class="img-team" src="assets/hongxu.JPG" alt="Hongxu"/><small><strong>Hongxu</strong> — Data &amp; API</small></div>
-        <div class="card"><img class="img-team" src="assets/jonathan.jpg" alt="Jonathan"/><small><strong>Jonathan</strong> — UI/Charts</small></div>
+  <main class="container section">
+    <!-- Project -->
+    <div class="panel">
+      <div class="panel-inner">
+        <h2 class="section-title">About this Project</h2>
+        <p class="section-sub">A lightweight MVC CRUD dashboard for exploring US states. Data persists in <code>localStorage</code>; World Bank API is used for read-only, up-to-date national indicators.</p>
       </div>
+    </div>
 
-      <!-- Technical README Link -->
-      <h3 class="mt24 m0">Technical Documentation</h3>
-      <p class="mt8"><a href="https://github.com/MdFaisalS2025/us-states-dashboard#readme" target="_blank" rel="noopener">GitHub Repository README</a> — includes endpoints, data model, CRUD details, and challenges.</p>
+    <!-- Team -->
+    <div class="panel mt24">
+      <div class="panel-inner">
+        <h2 class="section-title">Team</h2>
+        <div class="cards mt16">
+          <div class="card center">
+            <img class="img-team" src="assets/faisal.JPG" alt="Faisal"/>
+            <div class="mt12"><strong>Mohamed Faisal Sindhi</strong></div>
+            <small>Frontend Development, Deployment, Chatbot Integration</small>
+          </div>
+          <div class="card center">
+            <img class="img-team" src="assets/hongxu.JPG" alt="Hongxu"/>
+            <div class="mt12"><strong>Hongxu Yang</strong></div>
+            <small>UI/UX Design, ERD &amp; Documentation</small>
+          </div>
+          <div class="card center">
+            <img class="img-team" src="assets/jonathan.jpg" alt="Jonathan"/>
+            <div class="mt12"><strong>Jonathan James</strong></div>
+            <small>Controllers, Charts, Data Services</small>
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <!-- API Endpoints Used -->
-      <h3 class="mt24 m0">API Endpoints Used (Read-only)</h3>
-      <ul class="mt8">
-        <li>World Bank — GDP (current US$): <code>https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
-        <li>World Bank — Population: <code>https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
-      </ul>
+    <!-- Documentation buttons -->
+    <div class="panel mt24">
+      <div class="panel-inner center">
+        <h2 class="section-title">Documentation</h2>
+        <p class="section-sub">Technical details, endpoints, data model, CRUD flow, challenges.</p>
+        <div class="mt16">
+          <a class="btn" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">Open GitHub Repo</a>
+          <a class="btn outline" href="https://github.com/MdFaisalS2025/us-states-dashboard#readme" target="_blank" rel="noopener">Open README</a>
+        </div>
+      </div>
+    </div>
 
-      <!-- Data Model / ERD -->
-      <h3 class="mt24 m0">Data Model (ERD)</h3>
-      <p class="mt8">Final logical data model for the application’s entities and relationships.</p>
-      <a href="assets/logical_data_model_v3.png?v=20251031" target="_blank" rel="noopener" title="Open full-size ERD">
-        <img class="img-erd mt12" src="assets/logical_data_model_v3.png?v=20251031" alt="Logical Data Model ERD"/>
-      </a>
+    <!-- API Endpoints -->
+    <div class="panel mt24">
+      <div class="panel-inner">
+        <h2 class="section-title">API Endpoints Used (Read-only)</h2>
+        <ul class="mt12">
+          <li>World Bank — GDP (current US$): <code>https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
+          <li>World Bank — Population: <code>https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
+        </ul>
+      </div>
+    </div>
 
-      <!-- CRUD Overview -->
-      <h3 class="mt24 m0">CRUD Implementation Overview</h3>
-      <ul class="mt8">
-        <li><strong>Create:</strong> <code>create.html</code> posts to <code>api.upsert()</code> (localStorage).</li>
-        <li><strong>Read:</strong> <code>data.html</code> renders from <code>api.list()</code> with search &amp; region filter; <code>index.html</code> aggregates totals.</li>
-        <li><strong>Update:</strong> <code>update.html</code> loads record by ID and saves via <code>api.upsert()</code>.</li>
-        <li><strong>Delete:</strong> <code>delete.html</code> removes a record via <code>api.remove()</code>.</li>
-      </ul>
+    <!-- ERD -->
+    <div class="panel mt24">
+      <div class="panel-inner center">
+        <h2 class="section-title">Data Model (ERD)</h2>
+        <p class="section-sub">Logical design used for CRUD entities and relationships.</p>
+        <a href="assets/logical_data_model_v3.png?v=20251031" target="_blank" rel="noopener">
+          <img class="img-erd mt12" src="assets/logical_data_model_v3.png?v=20251031" alt="Logical Data Model ERD"/>
+        </a>
+      </div>
+    </div>
 
-      <!-- Notable Challenges & Solutions -->
-      <h3 class="mt24 m0">Notable Challenges &amp; Solutions</h3>
-      <ul class="mt8">
-        <li><strong>Consistent Layout:</strong> Content felt left-aligned. Solution: enforce centered containers and panels with <code>margin-inline:auto</code> and fixed max-width.</li>
-        <li><strong>External Insights Reliability:</strong> Occasional null/blocked values. Solution: robust World Bank fetch with recent date range and graceful fallbacks.</li>
-        <li><strong>Single Source of Truth:</strong> Ensured all pages read/write via a singleton <code>api</code> service on top of <code>localStorage</code>.</li>
-        <li><strong>Charts Separation:</strong> Removed Home charts to keep the landing page focused; visualizations live in <code>charts.html</code>.</li>
-      </ul>
-    </div></div>
+    <!-- CRUD + Challenges -->
+    <div class="panel mt24">
+      <div class="panel-inner">
+        <h2 class="section-title">CRUD Implementation Overview</h2>
+        <ul class="mt12">
+          <li><strong>Create:</strong> <code>create.html</code> → <code>api.upsert()</code> (localStorage).</li>
+          <li><strong>Read:</strong> <code>data.html</code> (search + region filter), <code>index.html</code> aggregates metrics.</li>
+          <li><strong>Update:</strong> <code>update.html</code> loads by ID, saves via <code>api.upsert()</code>.</li>
+          <li><strong>Delete:</strong> <code>delete.html</code> removes via <code>api.remove()</code>.</li>
+        </ul>
+        <div class="hr"></div>
+        <h3 class="m0">Notable Challenges &amp; Solutions</h3>
+        <ul class="mt12">
+          <li><strong>Centering / Consistency:</strong> Introduced container-capped inner panels (<code>max-width</code> + <code>margin-inline:auto</code>).</li>
+          <li><strong>External Insights robustness:</strong> Fetch recent range with graceful fallback when API returns null.</li>
+          <li><strong>Single source of truth:</strong> All UI reads/writes through a singleton <code>api</code> service layered on <code>localStorage</code>.</li>
+          <li><strong>Charts separation:</strong> Moved visualizations to <code>charts.html</code> to keep Home fast and focused.</li>
+        </ul>
+      </div>
+    </div>
   </main>
 
   <footer class="container footer">
