--- a/charts.html
+++ b/charts.html
@@ -11,9 +11,7 @@
     import { bootCharts } from './assets/charts.js?v=20251031';
     window.addEventListener('DOMContentLoaded', bootCharts);
   </script>
-  <style>
-    .chart-box{height:420px} /* give each canvas room to breathe */
-  </style>
+  <style>.chart-box{height:420px}</style>
 </head>
 <body>
   <header class="header">
@@ -40,14 +38,14 @@
       </div>
     </div>
 
-    <div class="panel mt24">
+    <div class="panel section">
       <div class="panel-inner">
         <h2 class="section-title">Top 10 States — GDP (billions)</h2>
         <div class="chart-box mt16"><canvas id="gdpChart"></canvas></div>
       </div>
     </div>
 
-    <div class="panel mt24">
+    <div class="panel section">
       <div class="panel-inner">
         <h2 class="section-title">Population Share by Region</h2>
         <div class="chart-box mt16"><canvas id="regionPie"></canvas></div>
@@ -57,10 +55,9 @@
 
   <footer class="container footer">
     <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
+    <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
 
-  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
