--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>US States Dashboard — Data Table</title>
+  <title>US States — Data Table</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css?v=20251031"/>
@@ -49,9 +49,8 @@
           <table class="table">
             <thead>
               <tr>
-                <th>ID</th><th>Name</th><th>Capital</th>
-                <th>Population</th><th>GDP (USD)</th><th>Area (km²)</th>
-                <th>Cities</th><th>Actions</th>
+                <th>ID</th><th>Name</th><th>Capital</th><th>Population</th>
+                <th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th>Actions</th>
               </tr>
             </thead>
             <tbody id="states-body"></tbody>
@@ -63,10 +62,9 @@
 
   <footer class="container footer">
     <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
+    <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
 
-  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
