--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
   </header>
 
   <main class="container section">
-    <!-- Overview -->
     <div class="panel">
       <div class="panel-inner">
         <h2 class="section-title">Overview</h2>
-        <p class="section-sub">A concise snapshot of all states currently tracked in the application.</p>
-        <div class="cards mt16">
+        <p class="section-sub">Snapshot of all states in the dataset.</p>
+        <div class="cards">
           <div class="card"><h3>Total Population</h3><div id="metric-pop" class="big">0</div><small>Across all states</small></div>
           <div class="card"><h3>Total GDP</h3><div id="metric-gdp" class="big">$0</div><small>Aggregate (USD)</small></div>
           <div class="card"><h3>Total Land Area</h3><div id="metric-area" class="big">0</div><small>km²</small></div>
@@ -43,11 +42,10 @@
       </div>
     </div>
 
-    <!-- External Insights -->
-    <div class="panel mt24">
+    <div class="panel section">
       <div class="panel-inner">
         <h2 class="section-title">External Insights</h2>
-        <p class="section-sub">Latest USA indicators from <span id="ext-source">World Bank Open Data</span> (read-only).</p>
+        <p class="section-sub">Latest USA indicators from <span id="ext-source">World Bank Open Data</span>.</p>
         <ul class="mt12">
           <li>USA GDP: <strong id="ext-gdp">Loading…</strong> <small>(Year: <span id="ext-gdp-year">—</span>)</small></li>
           <li>USA Population: <strong id="ext-pop">Loading…</strong> <small>(Year: <span id="ext-pop-year">—</span>)</small></li>
@@ -55,10 +53,9 @@
       </div>
     </div>
 
-    <!-- Next Actions -->
-    <div class="panel mt24">
+    <div class="panel section">
       <div class="panel-inner">
-        <h2 class="section-title">What would you like to do next?</h2>
+        <h2 class="section-title">Next actions</h2>
         <div class="mt12">
           <a class="btn" href="data.html">Open Data Table</a>
           <a class="btn secondary" href="create.html">Add a State</a>
@@ -70,10 +67,9 @@
 
   <footer class="container footer">
     <span>© 2025 US States Dashboard</span>
-    <span class="built">Built with ❤️ by Faisal, Hongxu & Jonathan</span>
+    <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
 
-  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
