--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <title>About — US States</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/styles.css?v=20251031"/>
+  <link rel="stylesheet" href="assets/styles.css?v=20251031c"/>
 </head>
 <body>
   <header class="header">
@@ -25,13 +25,15 @@
   </header>
 
   <main class="container section">
+    <!-- About (short intro) -->
     <div class="panel">
       <div class="panel-inner">
         <h2 class="section-title">About this Project</h2>
-        <p class="section-sub">MVC CRUD dashboard with persistent <code>localStorage</code> data and World Bank API for read-only insights.</p>
+        <p class="section-sub">A lightweight MVC CRUD dashboard for exploring US states. Data persists in <code>localStorage</code>. Read-only national indicators are fetched from the World Bank API.</p>
       </div>
     </div>
 
+    <!-- Team (names, pictures, roles) -->
     <div class="panel section">
       <div class="panel-inner">
         <h2 class="section-title">Team</h2>
@@ -55,33 +57,62 @@
       </div>
     </div>
 
+    <!-- Documentation buttons (GitHub + README) -->
     <div class="panel section">
       <div class="panel-inner center">
         <h2 class="section-title">Documentation</h2>
-        <p class="section-sub">Endpoints, data model, CRUD flow, challenges.</p>
+        <p class="section-sub">Technical details, endpoints, data model, CRUD flow, and challenges.</p>
         <div class="mt12">
-          <a class="btn" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank">GitHub Repo</a>
-          <a class="btn outline" href="https://github.com/MdFaisalS2025/us-states-dashboard#readme" target="_blank">README</a>
+          <a class="btn" href="https://github.com/MdFaisalS2025/us-states-dashboard" target="_blank" rel="noopener">Open GitHub Repo</a>
+          <a class="btn outline" href="https://github.com/MdFaisalS2025/us-states-dashboard#readme" target="_blank" rel="noopener">Open README</a>
         </div>
       </div>
     </div>
 
+    <!-- API endpoints used -->
     <div class="panel section">
       <div class="panel-inner">
-        <h2 class="section-title">API Endpoints (Read-only)</h2>
+        <h2 class="section-title">API Endpoints Used (Read-only)</h2>
         <ul class="mt12">
-          <li>World Bank — GDP: <code>https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
+          <li>World Bank — GDP (current US$): <code>https://api.worldbank.org/v2/country/USA/indicator/NY.GDP.MKTP.CD?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
           <li>World Bank — Population: <code>https://api.worldbank.org/v2/country/USA/indicator/SP.POP.TOTL?format=json&amp;per_page=8&amp;date=2019:2025</code></li>
         </ul>
       </div>
     </div>
 
+    <!-- ERD -->
     <div class="panel section">
       <div class="panel-inner center">
-        <h2 class="section-title">Data Model (ERD)</h2>
-        <a href="assets/logical_data_model_v3.png?v=20251031" target="_blank" rel="noopener">
-          <img class="img-erd mt12" src="assets/logical_data_model_v3.png?v=20251031" alt="Logical Data Model ERD"/>
+        <h2 class="section-title">Data Model (Updated ERD)</h2>
+        <a href="assets/logical_data_model_v3.png?v=20251031c" target="_blank" rel="noopener">
+          <img class="img-erd mt12" src="assets/logical_data_model_v3.png?v=20251031c" alt="Logical Data Model ERD"/>
         </a>
+      </div>
+    </div>
+
+    <!-- CRUD overview -->
+    <div class="panel section">
+      <div class="panel-inner">
+        <h2 class="section-title">Overview of CRUD Implementation</h2>
+        <ul class="mt12">
+          <li><strong>Create:</strong> <code>create.html</code> posts via a form into a singleton data service (<code>api.upsert()</code> → <code>localStorage</code>).</li>
+          <li><strong>Read:</strong> <code>data.html</code> renders the table with search &amp; region filter; <code>index.html</code> shows aggregates.</li>
+          <li><strong>Update:</strong> <code>update.html</code> loads by ID and persists via <code>api.upsert()</code>.</li>
+          <li><strong>Delete:</strong> <code>delete.html</code> removes via <code>api.remove()</code> and navigates back.</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Notable challenges and solutions -->
+    <div class="panel section">
+      <div class="panel-inner">
+        <h2 class="section-title">Notable Technical Challenges &amp; Solutions</h2>
+        <ul class="mt12">
+          <li><strong>Consistent Centering Across Pages:</strong> Introduced <code>.panel-inner</code> with <code>max-width</code> and global centering overrides to prevent left-skew from flex parents.</li>
+          <li><strong>External Insights Reliability:</strong> Fetch recent year ranges from World Bank and gracefully handle nulls, ensuring UI never blocks.</li>
+          <li><strong>Single Source of Truth:</strong> All UI flows through a singleton <code>api</code> service on top of <code>localStorage</code> for predictable CRUD.</li>
+          <li><strong>Charts Separation:</strong> Moved all visualizations to <code>charts.html</code> to keep Home simple and fast.</li>
+        </ul>
       </div>
     </div>
   </main>
@@ -91,6 +122,7 @@
     <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
   </footer>
 
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
