changed lot of stuff

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
       <div class="panel-inner center">
         <h2 class="section-title">Data Model (Updated ERD)</h2>
         <a href="assets/logical_data_model_v3.png?v=20251031c" target="_blank" rel="noopener">
-          <img class="img-erd mt12" src="assets/logical_data_model_v3.png?v=20251031c" alt="Logical Data Model ERD"/>
+          <img class="img-erd erd-sm mt12" src="assets/logical_data_model_v3.png?v=20251031c" alt="Logical Data Model ERD"/>
         </a>
       </div>
     </div>
