changed lot of stuff

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <small>Frontend Development, Deployment, Chatbot Integration</small>
           </div>
           <div class="card center">
-            <img class="img-team" src="assets/hongxu.JPG" alt="Hongxu"/>
+            <img class="img-team" src="assets/hongxu1.JPG" alt="Hongxu"/>
             <div class="mt12"><strong>Hongxu Yang</strong></div>
             <small>UI/UX Design, ERD &amp; Documentation</small>
           </div>
